--- a/src/main/resources/templates/public/login.html
+++ b/src/main/resources/templates/public/login.html
@@ -2,34 +2,65 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org"
   xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
+<head th:replace="fragments/head :: header">
+</head>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
+  <title>Login</title>
 </head>
 
 <body>
-  <div class="container p-5">
-    <form th:action="@{/login}" method="post">
-      <div th:if="${logout_success_message}" class="alert alert-success" role="alert"
-        th:text="${logout_success_message}"></div>
-      <div th:if="${credentials_invalid_message}" class="alert alert-danger" role="alert"
-        th:text="${credentials_invalid_message}"></div>
-      <div class="mb-3">
-        <label for="username" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="username" name="username">
+  <section class="flex flex-col md:flex-row sm:flex-col h-screen items-center">
+    <img th:src="@{/img/gradus.png}" alt="" class="w-128 h-128 object-center">
+
+    <div class="bg-white w-full md:max-w-md lg:max-w-full md:mx-auto md:mx-0 md:w-1/2 xl:w-1/3 h-screen px-6 lg:px-16 xl:px-12
+          flex items-center justify-center">
+
+      <div class="w-full h-100">
+        <div th:if="${param.error}" id="alert_message_box"
+          class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+          <strong class="font-bold">Invalid credentials!</strong>
+          <span class="block sm:inline">Your email or password is incorrect</span>
+          <span><button onclick="closeAlertBox()" class="fas fa-times"></button></span>
+        </div>
+
+        <h1 class="text-xl md:text-2xl font-bold leading-tight mt-12">Log in to your account</h1>
+
+        <form class="mt-6" th:action="@{/login}" method="post">
+          <div>
+            <label class="block text-gray-700">Email Address</label>
+            <input type="email" name="username" id="username" placeholder="Enter Email Address"
+              class="w-full px-4 py-3 rounded-lg bg-gray-200 mt-2 border focus:border-blue-500 focus:bg-white focus:outline-none"
+              autofocus autocomplete required>
+          </div>
+
+          <div class="mt-4">
+            <label class="block text-gray-700">Password</label>
+            <input type="password" name="password" id="password" placeholder="Enter Password" class="w-full px-4 py-3 rounded-lg bg-gray-200 mt-2 border focus:border-blue-500
+                  focus:bg-white focus:outline-none" required>
+          </div>
+
+          <button type="submit" class="transition duration-500 w-full block bg-indigo-400 duration-500 hover:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 focus:bg-indigo-400 text-white font-semibold rounded-lg
+          px-4 py-3 mt-6">Log In</button>
+        </form>
+
+        <hr class="my-6 border-gray-300 w-full">
+
+        <p class="mt-8">Need an account? <a th:href="@{/register}"
+            class="text-blue-500 hover:text-blue-700 font-semibold">Create an
+            account</a>
+        </p>
       </div>
-      <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
-        <input type="password" name="password" class="form-control" id="password">
-      </div>
-      <button type="submit" class="btn btn-primary">Login</button>
-    </form>
-  </div>
+    </div>
+
+  </section>
 </body>
+
+<script>
+  const closeAlertBox = () => {
+    let msg_box = document.getElementById("alert_message_box")
+    msg_box.style.display = "none";
+  }
+</script>
 
 </html>
