--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,5 +1,5 @@
 <nav th:fragment="nav" class="p-4 row-span-1 col-span-3 object-bottom">
-  <div class="p-2 text-gray-900 bg-white rounded-lg shadow-lg font-medium capitalize">
+  <div class="p-2 text-gray-900 bg-gray-50 rounded-lg shadow-lg font-medium capitalize">
     <a th:href="@{/user/home}">
       <span class="px-2 mr-2 border-r border-gray-800">
         <img th:src="@{/img/gradus-icon.png}" class="w-8 h-8 -mt-1 inline mx-auto">
@@ -13,7 +13,7 @@
     </span>
     <div id="tooltip-assignments" role="tooltip"
       class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
-      Assignments and To do
+      Assignments
       <div class="tooltip-arrow" data-popper-arrow></div>
     </div>
     <!--Notes-->
