--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -5,17 +5,19 @@
         <img th:src="@{/img/gradus-icon.png}" class="w-8 h-8 -mt-1 inline mx-auto">
       </span>
     </a>
-    <!--Todo-->
-    <span class="px-4 py-1 cursor-pointer rounded mb-5 transition duration-150 ease-in-out"
-      data-tooltip-target="tooltip-assignments">
-      <i class="w-8 fas fa-th-list p-2 bg-gray-200 rounded-full">
-      </i>
-    </span>
-    <div id="tooltip-assignments" role="tooltip"
-      class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
-      Assignments
-      <div class="tooltip-arrow" data-popper-arrow></div>
-    </div>
+    <!--Assignments-->
+    <a th:href="@{/assignments}">
+      <span class="px-4 py-1 cursor-pointer rounded mb-5 transition duration-150 ease-in-out"
+        data-tooltip-target="tooltip-assignments">
+        <i class="w-8 fas fa-th-list p-2 bg-gray-200 rounded-full">
+        </i>
+      </span>
+      <div id="tooltip-assignments" role="tooltip"
+        class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
+        Assignments
+        <div class="tooltip-arrow" data-popper-arrow></div>
+      </div>
+    </a>
     <!--Notes-->
     <span class="px-3 cursor-pointer transition duration-150 ease-in-out" data-tooltip-target="tooltip-notes">
       <i class="fas fa-sticky-note p-2 bg-gray-200 rounded-full">
@@ -34,17 +36,6 @@
     <div id="tooltip-auto-grading" role="tooltip"
       class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
       Autograding and report
-      <div class="tooltip-arrow" data-popper-arrow></div>
-    </div>
-    <!--Priority-->
-    <span class="px-3 w-8 relative cursor-pointer transition duration-150 ease-in-out"
-      data-tooltip-target="tooltip-priority-tasks">
-      <i class="w-8 fas fa-bell p-2 bg-gray-200 rounded-full">
-      </i>
-    </span>
-    <div id="tooltip-priority-tasks" role="tooltip"
-      class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700">
-      Priority tasks
       <div class="tooltip-arrow" data-popper-arrow></div>
     </div>
     <!--Account-->
