--- a/src/main/resources/templates/pages/assignments.html
+++ b/src/main/resources/templates/pages/assignments.html
@@ -36,12 +36,12 @@
             <p class="text-blue-700">Name or Description:</p>
             <input type="text" name="description" id="description"
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              required />
+              required autocomplete="off" />
 
             <p class="text-blue-700">Progress:</p>
             <input type="text"
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              name="progress" id="progress" required />
+              name="progress" id="progress" required autocomplete="off" />
 
             <p class="text-blue-700">Due Date:</p>
             <div class="relative">
@@ -55,7 +55,7 @@
               </div>
               <input datepicker datepicker-autohide type="text" name="dueDate" id="dueDate"
                 class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                placeholder="Select date" required />
+                placeholder="Select date" required autocomplete="off" />
             </div>
             <button type="submit"
               class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
