--- a/src/main/resources/templates/pages/edit.html
+++ b/src/main/resources/templates/pages/edit.html
@@ -16,7 +16,10 @@
     <div class="p-5">
       <code class="text-lg" th:text="${current_date}"></code>
       <h1 class="text-blue-700 text-4xl font-bold">
-        Edit Assignment Details
+        <span><a th:href="@{/assignments}"><i
+              class="fas fa-chevron-circle-left bg-indigo-500 bg-clip-text text-transparent hover:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500"></i></a></span>
+        Edit Assignment
+        Details
       </h1>
     </div>
 
@@ -28,7 +31,7 @@
             <p class="text-blue-700">Progress:</p>
             <input type="text"
               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              name="progress" id="progress" required />
+              name="progress" id="progress" autocomplete="off" required />
 
             <p class="text-blue-700">Due Date:</p>
             <div class="relative">
@@ -42,7 +45,7 @@
               </div>
               <input datepicker datepicker-autohide type="text" name="dueDate" id="dueDate"
                 class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                placeholder="Select date" required />
+                placeholder="Select date" required autocomplete="off" />
             </div>
             <button type="submit"
               class="w-full text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
@@ -59,6 +62,7 @@
     </nav>
 
   </div>
+  <script src="https://unpkg.com/@themesberg/flowbite@1.2.0/dist/datepicker.bundle.js"></script>
   <script src="https://unpkg.com/@themesberg/flowbite@1.2.0/dist/flowbite.bundle.js"></script>
 </body>
 
