--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -22,7 +22,7 @@
       </h1>
     </div>
     <div class="flex-grow">
-      <div class="p-5 flex lg:flex-row md:flex-col sm:flex-col justify-evenly">
+      <div class="p-5 flex lg:flex-row md:flex-col sm:flex-col justify-evenly" th:if="${assignments}">
         <div class="p-3 flex-grow" th:each="assignment, iter: ${assignments}" th:if="${iter.index} < 3">
           <div
             class="p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
@@ -50,7 +50,11 @@
             </a>
           </div>
         </div>
-
+      </div>
+      <div th:if="${assignments.empty}" class="p-5 text-center">
+        <h1><a th:href="@{/assignments}" id="assignmentsText"
+            class="text-2xl text-transparent bg-gray-400 bg-clip-text font-bold hover:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500"
+            onmouseover="changeTextAssignment()" onmouseleave="changeTextAssignmentOut()">No Assignments</a></h1>
       </div>
 
       <br>
@@ -73,7 +77,7 @@
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Get started with priority tasks and clear your
               list for today!</p>
             <a href="#"
-              class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700">
+              class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 dark:bg-blue-600 dark:hover:bg-blue-700">
               Get Started
               <svg class="ml-2 -mr-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20"
                 xmlns="http://www.w3.org/2000/svg">
@@ -94,7 +98,7 @@
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Unsure about where you are right now? Check
               your marks and generate a detailed report quickly!</p>
             <a href="#"
-              class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700">
+              class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 dark:bg-blue-600 dark:hover:bg-blue-700">
               Get Started
               <svg class="ml-2 -mr-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20"
                 xmlns="http://www.w3.org/2000/svg">
@@ -120,7 +124,7 @@
               Supports LaTeX.
             </p>
             <a href="#"
-              class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700">
+              class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 dark:bg-blue-600 dark:hover:bg-blue-700">
               Get Started
               <svg class="ml-2 -mr-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20"
                 xmlns="http://www.w3.org/2000/svg">
@@ -142,7 +146,7 @@
               Plan your assignments ahead of time and track your progress. Finish it ahead of time using this planner!
             </p>
             <a th:href="@{/assignments}"
-              class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 dark:bg-blue-600 dark:hover:bg-blue-700">
+              class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 dark:bg-blue-600 dark:hover:bg-blue-700">
               Get Started
               <svg class="ml-2 -mr-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20"
                 xmlns="http://www.w3.org/2000/svg">
@@ -182,6 +186,19 @@
 
 
   <script src="https://unpkg.com/@themesberg/flowbite@1.2.0/dist/flowbite.bundle.js"></script>
+
+  <script>
+    const changeTextAssignment = () => {
+      let element = document.getElementById("assignmentsText");
+      element.innerText = "Add Assignment";
+    }
+
+    const changeTextAssignmentOut = () => {
+      let element = document.getElementById("assignmentsText");
+      element.innerText = "No Assignments";
+    }
+
+  </script>
 
 </body>
 
