finish note taking feature with support for markdown rendering

--- a/src/main/resources/templates/pages/edit.html
+++ b/src/main/resources/templates/pages/edit.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://unpkg.com/@themesberg/flowbite@1.2.0/dist/flowbite.min.css" />
 </head>
 
-<title>Assignments</title>
+<title>Edit Assignment</title>
 
 <body class="container mx-auto">
   <div class="flex flex-col h-screen">
