--- a/src/main/resources/templates/public/index.html
+++ b/src/main/resources/templates/public/index.html
@@ -104,7 +104,7 @@
               </div>
               <div sec:authorize="isAuthenticated()" class="hero-form field field-grouped">
                 <div class="control">
-                  <a class="button button-primary rounded-1" th:href="@{/user/home}">Go to dashboard</a>
+                  <a class="button button-primary rounded-1" th:href="@{/home}">Go to dashboard</a>
                 </div>
               </div>
             </div>
