--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -67,27 +67,6 @@
       </h1>
 
       <div class="p-5 flex lg:flex-row md:flex-col sm:flex-col justify-evenly">
-        <!--To do Card-->
-        <div class="p-3">
-          <div
-            class="p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-            <a href="#">
-              <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Check your TODO</h5>
-            </a>
-            <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Get started with priority tasks and clear your
-              list for today!</p>
-            <a href="#"
-              class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 dark:bg-blue-600 dark:hover:bg-blue-700">
-              Get Started
-              <svg class="ml-2 -mr-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20"
-                xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd"
-                  d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z"
-                  clip-rule="evenodd"></path>
-              </svg>
-            </a>
-          </div>
-        </div>
         <!--Report card-->
         <div class="p-3">
           <div
@@ -123,7 +102,7 @@
               <br>
               Supports LaTeX.
             </p>
-            <a href="#"
+            <a th:href="@{/notes}"
               class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 dark:bg-blue-600 dark:hover:bg-blue-700">
               Get Started
               <svg class="ml-2 -mr-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20"
