--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -71,12 +71,12 @@
         <div class="p-3">
           <div
             class="p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-            <a href="#">
+            <a th:href="@{/autograding/upload}">
               <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Generate a report</h5>
             </a>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Unsure about where you are right now? Check
               your marks and generate a detailed report quickly!</p>
-            <a href="#"
+            <a th:href="@{/autograding/upload}"
               class="inline-flex items-center py-2 px-3 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 dark:bg-blue-600 dark:hover:bg-blue-700">
               Get Started
               <svg class="ml-2 -mr-1 w-4 h-4" fill="currentColor" viewBox="0 0 20 20"
@@ -92,7 +92,7 @@
         <div class="p-3">
           <div
             class="p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-            <a href="#">
+            <a th:href="@{/notes}">
               <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Jot down notes</h5>
             </a>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">Need to quickly remember something? Jot down
@@ -118,7 +118,7 @@
         <div class="p-3">
           <div
             class="p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-            <a href="#">
+            <a th:href="@{/assignments}">
               <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Plan assignments</h5>
             </a>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
