update template to include correct docs link

--- a/src/main/resources/templates/pages/upload.html
+++ b/src/main/resources/templates/pages/upload.html
@@ -28,7 +28,7 @@
           Upload your prepared Gradus file here to start autograding. Unsure about how to create a Gradus file?
           <br>
           <a class="text-transparent bg-blue-500 bg-clip-text font-bold hover:bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500"
-            th:href="@{/docs#preparing-your-gradus-file}">
+            href="https://gradus-docs.netlify.app/docs/using-gradus/autograding/#setting-up-your-gradus-file">
             View our docs!
           </a>
         </h2>
