--- a/src/main/resources/templates/public/index.html
+++ b/src/main/resources/templates/public/index.html
@@ -374,9 +374,8 @@
                       </g>
                     </svg>
                   </div>
-                  <h4 class="feature-title h3-mobile mb-8">Powerful</h4>
-                  <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to
-                    emphasise design elements.</p>
+                  <h4 class="feature-title h3-mobile mb-8">Easy to use</h4>
+                  <p class="text-sm">A simple friendly UI for students to focus on getting their work done.</p>
                 </div>
               </div>
               <div class="feature text-center is-revealing">
@@ -410,8 +409,7 @@
                     </svg>
                   </div>
                   <h4 class="feature-title h3-mobile mb-8">Powerful</h4>
-                  <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to
-                    emphasise design elements.</p>
+                  <p class="text-sm">Complete with autograding features, this platform will elevate your work.</p>
                 </div>
               </div>
               <div class="feature text-center is-revealing">
@@ -426,9 +424,8 @@
                       </g>
                     </svg>
                   </div>
-                  <h4 class="feature-title h3-mobile mb-8">Powerful</h4>
-                  <p class="text-sm">A pseudo-Latin text used in web design, layout, and printing in place of English to
-                    emphasise design elements.</p>
+                  <h4 class="feature-title h3-mobile mb-8">Organised</h4>
+                  <p class="text-sm">Keep track of everything on 1 centralised platform.</p>
                 </div>
               </div>
             </div>
@@ -498,10 +495,7 @@
           </div>
           <ul class="footer-links list-reset">
             <li>
-              <a th:href="@{/docs}">Docs</a>
-            </li>
-            <li>
-              <a th:href="@{/plans}">What's next?</a>
+              <a href="https://gradus-docs.netlify.app/">Docs</a>
             </li>
           </ul>
           <ul class="footer-social-links list-reset">
